mule-user-guide/v/3.8/object-store-connector.adoc
= 对象存储连接器
:keywords: anypoint studio, connector, object store, mule stores
：imagesdir：./_images

_选择_

对象存储连接器允许您连接到Mule中的对象存储设施，并公开利用Mule对象存储的功能的便捷方法。在内部，Mule在各种过滤器，路由器和其他需要在消息之间存储状态的消息处理器中使用对象存储。 Object Store连接器通过引用与Object Store一起工作。用户使用对象存储连接器应用于对象存储的任何转换都会传播到该对象存储的所有引用。

[[prerequisites]]
== 先决条件

本文档假定您熟悉Object Store，Mule，Anypoint连接器，
Anypoint Studio基本要素，骡流中的元素以及全局元素。请参阅另请参阅部分
本文件的其他链接。

有关对象存储区数据限制的信息，请参阅：

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 名称空间和架构

在Studio中设计应用程序时，将连接器从面板拖放到Anypoint Studio画布上的操作会使用连接器名称空间和模式位置填充XML代码。

对于XML或独立版本，请包含以下信息：

[%header%autowidth.spread]
|===
|项 | URL
|命名空间 | `+xmlns:objectstore="http://www.mulesoft.org/schema/mule/objectstore"+`
|架构位置 | `+http://www.mulesoft.org/schema/mule/object/current/mule-objectstore.xsd+`
|===

在应用程序中包含连接器名称空间和模式位置：

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:objectstore="http://www.mulesoft.org/schema/mule/objectstore"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/objectstore
               http://www.mulesoft.org/schema/mule/objectstore/current/mule-objectstore.xsd">
  
      <!-- Insert your configuration elements and your flow here -->
</mule>
----

[[compatibility]]
== 兼容性

Object Store连接器兼容：

[%header,cols="20a,80a",width=70%]
|===
|应用/服务 |版本
| Mule运行时 | 3.6.0或更高版本
| Anypoint Studio  | 5.2或更新版本
|===

从版本2.0.0开始，对象存储连接器与其他选择连接器一样，可以通过Anypoint Platform进行商业授权。以前的版本仍然免费提供给社区。


[[install]]
== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

[[springbeans]]
== 关于对象存储Spring Bean实例

默认情况下，Mule包含三个默认对象存储，每次在本地和运行时管理器上运行Mule时都会实例化。

每个Mule运行时都包含这三个spring bean实例：

*  `_defaultInMemoryObjectStore`
*  `_defaultUserObjectStore`
*  `_defaultTransientUserObjectStore`

您也可以编写自己的对象存储Java类，然后在您的应用程序中包含一个实例作为Spring bean。您可以在定义新的Object Store全局元素时引用自定义对象存储。

对象存储版本2重写_defaultUserObjectStore对象存储。请参阅https://docs.mulesoft.com/object-store[Object Store v2]。

[[persistingdata]]
=== 关于在运行时管理器中持久化对象存储

Persistent选项使数据保留在本地应用程序中;但是要在Runtime Manager的Application Data用户界面中保存数据，则需要在ObjectStore配置中使用`_defaultUserObjectStore` spring bean实例。

`_defaultUserObjectStore` spring bean实例确保运行时管理器应用程序中的对象存储在重新部署中存活。当您使用这个bean实例时，数据会保留在Runtime Manager工作器之外（但是在云中），这就是重新启动后数据可用的原因。

使用Object Store Reference字段引用Spring bean实例。

对于XML或独立使用，请添加`objectStore-ref="_defaultUserObjectStore"`参数，例如：

[source,xml]
----
<objectstore:config ... objectStore-ref="_defaultUserObjectStore" .../>
----

Persistent选项声明如下：

[source, xml]
----
<objectstore:config ... persistent="true"/>
----

[[config-global]]
== 使用Studio Visual Editor设置全局配置

配置一个全局对象存储元素，它可以被应用程序中的对象存储连接器的所有实例使用。

. 点击画布底部的全局元素标签。
. 在Global Mule Configuration Elements屏幕中，单击Create。
. 在Choose Global Type向导中，展开Connector Configuration并选择ObjectStore：Configuration，然后单击Ok。
+
image:objectstore_config_global_wizard.png[全局元素配置向导]
+
. 根据您的需要配置参数。这是您从以下位置配置连接器全局元素的屏幕：
+
image:objectstore_config_global.png[“全局元素配置”]
+
[%header,cols="30a,70a"]
|===
| {参数{1}}说明
|名称|（必需）输入配置的名称以引用它。
|分区|分区的名称。如果设置了，并且在objectstore-ref属性中指定了可分区对象库，则将使用分区名称。否则，分区名称将被忽略。

这意味着：

* 如果您定义了一个objectstore-ref并且对象存储是可分区的，则连接器将使用分区名称。
* 如果您定义了一个objectstore-ref并且对象存储区不可分区，则连接器将忽略分区名称。
* 如果您未定义objectstore-ref，但提供了分区名称，则连接器会将分区名称应用于默认对象库。
|对象存储引用|指定对象存储spring bean实例。这是可选的，如果未指定，则使用默认的内存或持久存储。请参见xref：springbeans [关于Object Store的Spring Bean实例]。
|输入Ttl | TimeToLive存储的值以毫秒为单位。使用此参数时，最大入口和到期间隔是强制性的。您必须提供所有条目TTL，最大条目和到期时间间隔，或者不提供任何条目。
|到期间隔|指定到期检查间隔（以毫秒为单位）。
|最大条目数|指定最大条目数。
|持久性|只要所需商店需要持久化，就指定它。请参阅xref：persistingdata [关于在运行时管理器中持久化对象存储]。
|===
+
注意：在上图中，占位符值是指放置在配置文件中的配置文件
您项目的`src`文件夹。
+
您可以将您的凭据输入到全局配置属性中，也可以引用包含这些值的配置文件。为了更简单的维护和更好的项目重用性，Mule建议您使用配置文件。如果需要将这些值保存在单独的文件中，则需要将其部署到不同的环境，例如生产，开发和质量保证（访问凭证不同）。
. 单击确定以保存全局连接器配置。

== 使用XML设置全局配置

请按照以下步骤在应用程序中配置连接器：
使用以下全局配置代码在您的流的外部和上方创建全局对象存储配置。

[source,xml]
----
<objectstore:config name="ObjectStore__Configuration" partition="${objectstore.partition.counter}" doc:name="ObjectStore: Configuration"/>
----

当您在Studio的XML编辑器或其他文本编辑器中手动编写Mule应用程序代码时，请将这些代码粘贴到`<mule>`标记内的Configuration XML标题中，如下例所示。

[%header,cols="25a,75a"]
|===
| {名称{1}}说明
| name  |对象库配置的标识符。其他组件必须通过此名称引用此配置。

Studio字段：名称+
默认值：无+
Java类型：String +
MIME类型：/ +
编码：UTF-8
| doc：name  |在Anypoint Studio中显示的字符串。

Studio字段：名称+
默认值：无+
Java类型：String +
MIME类型：/ +
编码：UTF-8
|分区 |分区的名称。如果设置了，并且在objectstore-ref属性中指定了可分区对象库，则将使用分区名称。否则，分区名称将被忽略。

这意味着：

* 如果您定义了一个objectstore-ref并且对象存储是可分区的，则连接器将使用分区名称。
* 如果您定义了一个objectstore-ref并且对象存储区不可分区，则连接器将忽略分区名称。
* 如果您未定义objectstore-ref，但提供了分区名称，则连接器会将分区名称应用于默认对象库。

Studio Field：分区+
默认值：无+
Java类型：String +
MIME类型：/ +
编码：UTF-8
|对象存储-REF  |可选。引用一个对象存储spring bean实例。根据上下文使用实例（独立Mule运行时，Mule运行时群集或CloudHub群集）。您还可以通过名称`_defaultInMemoryObjectStore`，`_defaultUserObjectStore`或`_defaultTransientUserObjectStore`指定其中一个默认对象库。请参见xref：springbeans [关于Object Store的Spring Bean实例]。 *Note:*您必须指定`_defaultUserObjectStore`才能让数据在Runtime Manager的应用程序数据用户界面中显示。

Studio字段：对象存储参考+
默认值：无+
Java类型：String +
MIME类型：无+
编码：无
| entryTtl  |存活时间，以毫秒为单位。如果使用此参数，maxEntries和expirationInterval是强制性的。

Studio Field：Entry Ttl +
默认值：无+
Java类型：Int +
MIME类型：/ +
编码：UTF-8
| expirationInterval  |以毫秒为单位指定到期检查时间间隔。

工作室领域：到期间隔+
默认值：无+
Java类型：Int +
MIME类型：/ +
编码：无
| maxEntries  |指定最大条目数。

Studio Field：Max Entries +
默认值：无+
Java类型：Int +
MIME类型：/ +
编码：无
| persistent  |指定所需的商店是否需要
持久与否（这个参数如果被忽略
对象存储使用objectStore-ref属性通过引用传递，
或者如果没有定义分区名称）。
如果persistent是`false`，那么当a时，数据可能会丢失
Mule运行时重新启动。请参阅xref：persistingdata [关于在运行时管理器中持久化对象存储]。

工作室领域：持久（复选框）+
默认值：`false` +
Java类型：布尔+
MIME类型：/ +
编码：无
|===

以下是一个示例对象库配置，它指定`defaultUserObjectStore`内名为`customers`的分区，并指定对象库应该是持久性的。

[source, xml]
----
<objectstore:config name="ObjectStore__Configuration" partition="customer"  persistent="true"/>
----

如果您没有为objectstore-ref指定值，则使用`_defaultUserObjectStore`，这与此配置等效：

[source, xml]
----
<objectstore:config ... objectstore-ref="_defaultUserObjectStore"  persistent="true"/>
----

如果您不想使用其中一个默认对象库，则可以定义自己的Java bean并将其引用到objectstore-ref属性中。

=== 在Mavenized Mule应用程序中使用连接器

如果您正在编写Mavenized Mule应用程序，则此XML片段必须包含在您的`pom.xml`文件中。

[source,xml,linenums]
----
<dependency>
  <groupId>org.mule.modules</groupId>
  <artifactId>mule-module-objectstore</artifactId>
  <version>2.1.0</version>
</dependency>
----

在`<version>`标签内，为最新版本提供所需的版本号，单词`RELEASE`，或者为最新版本提供`SNAPSHOT`。迄今为止的可用版本是：

*  2.1.0
*  2.0.1
*  2.0.0
*  1.3.3
*  1.3.2

[[using-the-connector]]
== 使用此连接器

对象存储连接器是基于操作的连接器，这意味着将连接器添加到流中时，需要配置连接器执行的特定操作。查看 link:https://mulesoft.github.io/objectstore-connector[github.io]中的整个操作处理器列表，或单击下面列出的操作。该连接器当前支持以下操作列表，每个操作都需要设置某些属性：

*  <<Contains Processor>>
*  <<Dual Store Processor>>
*  <<Remove Processor>>
*  <<Retrieve Processor>>
*  <<Retrieve All Keys Processor>>
*  <<Retrieve and Store Processor>>
*  <<Store Processor>>

注意：双存储操作可能会产生误导。此操作的功能是对对象存储执行两次写操作，第一次写入`objectStore.store(key, value)`，第二次写入`objectStore.store(value, key)`操作。

[[adding-to-a-flow]]
=== 添加到流程中

. 在Anypoint Studio中创建一个新的*Mule Project*。
. 添加合适的Mule入站端点（例如HTTP侦听器或文件端点）以开始流程。
. 将Object Store连接器拖放到画布上。
. 单击连接器组件打开属性编辑器。
+
[.center.text-center]
image:objectstore_usecase_settings.png[流量设置]
+
. 配置以下参数：
+
[%header%autowidth.spread]
|===
| {字段{1}}说明
2 + |基本设置
|显示名称|在应用程序中输入连接器的唯一标签。
|连接器配置|连接到链接到此连接器的全局元素。全局元素封装有关到目标资源或服务的连接的可重用数据。选择刚刚创建的全局对象存储连接器元素。
|操作|从下拉菜单中选择存储。
2 + |一般
|键|要存储的对象的标识符。
|值引用|要存储的对象。
|===
+
. 保存您的配置。

[[example-use-case]]
== 示例用例

安装并配置Object Store连接器后，在Mule流中使用它来存储和检索员工数据。

以下Mule App使用Object Store连接器以JSON格式存储包含员工标识符，名字，姓氏和年龄的员工数据。 Mule应用程序有两个HTTP端点。

*  `/store`：用于存储员工数据
*  `/retrieve`：获取上述标识符的员工数据。

image:user-manual-e8636.png[存储和检索员工数据]

让我们从存储员工数据的流程开始。

. 在Anypoint Studio中创建一个新的Mule项目。
. 将HTTP连接器拖到画布上并配置以下参数：
+
image:objectstore-http-props-store.png[用于存储端点的objectstore http config props]
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|显示名称| HTTP
|连接器配置| 如果尚未创建HTTP元素，请单击加号添加新的HTTP侦听器配置，然后单击确定（将值保留为其默认值）。
| {路径{1}} /存储
|===
+
接下来，将对象存储连接器拖到转换消息组件旁边，并根据以下步骤对其进行配置：
. 单击“连接器配置”字段旁边的加号以添加新的对象存储全局元素。
. 根据下表配置全局元素：
+
[%header%autowidth.spread]
|===
| {参数{1}}说明|值
|名称|输入配置的名称以引用它。| <Configuration_Name>
|分区|分区的名称| `employees`
|===
+
. 相应的XML配置应如下所示：
+
[source,xml]
----
<objectstore:config name="ObjectStore__Configuration" partition="employees" doc:name="ObjectStore: Configuration"/>
----
+
. 返回Object Store连接器的属性编辑器，配置其余参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
2 + |基本设置：
|显示名称|存储员工（或您喜欢的任何其他名称）。
|连接器配置| ObjectStore__Configuration（您创建的全局元素的引用名称）。
| {行动{1}}商店
2 + |一般：
|关键| ＃[message.inboundProperties.'http.query.params'.id]
|值引用| ＃[有效内容]
|===
+
. 检查您的XML如下所示：
+
[source,xml]
----
<objectstore:store config-ref="ObjectStore__Configuration" key="#[message.inboundProperties.'http.query.params'.id]" value-ref="#[payload]" doc:name="Store employee"/>
----
+
. 同样，拖动另一个Object Store连接器以获取Store中的所有密钥。
. 根据下表配置属性编辑器：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
2 + |基本设置：
|显示名称|获取所有密钥（或您喜欢的任何其他名称）。
|连接器配置| ObjectStore__Configuration（您创建的全局元素的引用名称）。
|操作| 所有键
|===
+
. 检查您的XML如下所示：
+
[source,xml]
----
<objectstore:retrieve-all-keys config-ref="ObjectStore__Configuration" doc:name="Get all keys"/>
----
+
. 在Object Store连接器之后添加一个*Logger*作用域，以打印Mule Console中所有键操作传递的数据。根据下表配置记录器。
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|显示名称|记录员工ID（或您喜欢的任何其他名称）
|信息|键：`#[payload]`
| {级{1}} INFO
|===
+
. 在记录器组件后添加一个设置有效负载。根据下表配置组件。
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|显示名称|显示员工ID（或您喜欢的任何其他名称）
|信息|键：`#[payload]`
| {级{1}} INFO
|===

现在让我们添加另一个流程来检索以前存储的员工数据

. 将流动组件拖动到上述流程的下方。
. 将HTTP连接器拖到画布上并配置以下参数：
+
image:objectstore-http-props-retrieve.png[用于检索端点的objectstore http config props]
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|显示名称| HTTP
|连接器配置| 使用已有的配置。
| {路径{1}} /检索
|===
+
. 拖动*Object Store connector*并根据以下步骤进行配置：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
2 + |基本设置：
|显示名称|存储员工（或您喜欢的任何其他名称）。
|连接器配置| ObjectStore__Configuration（您创建的全局元素的引用名称）。
| {操作{1}}检索
2 + |一般：
|关键|  `#[message.inboundProperties.'http.query.params'.id]`
|===
+
. 检查您的XML如下所示：
+
[source,xml,linenums]
----
<objectstore:retrieve config-ref="ObjectStore__Configuration" key="#[message.inboundProperties.'http.query.params'.id]" doc:name="Retrieve Employee"/>
----
+
. 在Object Store连接器之后添加一个Logger作用域，以将前一操作中正在检索的数据打印到Mule控制台。根据下表配置记录器。
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|显示名称|记录员工数据（或您喜欢的任何其他名称）
|信息|键：`#[payload]`
| {级{1}} INFO
|===
+
. 在记录器组件后添加一个设置有效负载。根据下表配置组件。
+
[%header%autowidth.spread]
|===
| {参数{1}}值
| *Display Name* |显示员工数据（或您喜欢的任何其他名称）
| *Message* |键：＃[有效载荷]
| *Level* | INFO
|===

[[example-code]]
=== 示例代码

将此代码粘贴到您的XML编辑器中，以便将此示例用例的流程快速加载到您的Mule应用程序中。

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:objectstore="http://www.mulesoft.org/schema/mule/objectstore" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" 
xmlns:http="http://www.mulesoft.org/schema/mule/http" 
xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" 
xmlns="http://www.mulesoft.org/schema/mule/core" 
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans 
	http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core 
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http 
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/objectstore 
http://www.mulesoft.org/schema/mule/objectstore/current/mule-objectstore.xsd
http://www.mulesoft.org/schema/mule/ee/dw 
http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/ee/tracking 
http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <objectstore:config name="ObjectStore__Configuration" partition="employees" doc:name="ObjectStore: Configuration"/>
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" 
    port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="objectstore-store-employee-flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/store" doc:name="HTTP"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/json
---
{
		id: inboundProperties.'http.query.params'.id,
		name: inboundProperties.'http.query.params'.name,
		lname: inboundProperties.'http.query.params'.lname,
		age: inboundProperties.'http.query.params'.age
}]]></dw:set-payload>
        </dw:transform-message>
        <objectstore:store config-ref="ObjectStore__Configuration" 
	key="#[message.inboundProperties.'http.query.params'.id]" 
	value-ref="#[payload]" doc:name="Store employee"/>
        <objectstore:retrieve-all-keys config-ref="ObjectStore__Configuration" doc:name="Get all keys"/>
        <logger message="Keys : #[payload]" level="INFO" doc:name="Log Employee Id's"/>
        <set-payload value="Keys : #[payload]" doc:name="Show Employee Id's"/>
    </flow>
    <flow name="objectstore-retrieve-employee-flow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/retrieve" doc:name="HTTP"/>
        <objectstore:retrieve config-ref="ObjectStore__Configuration" 
	key="#[message.inboundProperties.'http.query.params'.id]" doc:name="Retrieve Employee"/>
        <logger message="Employee: #[payload]" level="INFO" doc:name="Log Employee"/>
        <set-payload value="Employee : #[payload]" doc:name="Show Employee"/>
    </flow>
</mule>
----

[[run]]
== 运行时间

. 将项目保存并运行为Mule应用程序。
. 打开Web浏览器并输入URL以检查响应。
+
要存储员工记录，请输入URL：
+
`+http://localhost:8081/store?id=1&name=David&lname=Malhar&age=10+`。
+
要检索员工记录，请输入网址：
+
`+http://localhost:8081/retrieve?id=1+`
+
记录器在浏览器中以JSON格式显示员工记录。

[NOTE]
* 当尝试覆盖现有密钥时，对象存储会抛出异常;这是预期的行为。当使用对象存储中不存在的键进行尝试读取时，对象存储会引发异常;这也是预料之中的;这也是预期的行为。
* 这个例子使用了一个简单的内存中存储;要清除该商店的内容，请重新启动Mule运行时。

== 对象存储库连接器参考

用于访问对象库的通用模块。

这可以与Mule默认实现一起使用，或者可以通过ref传递。它允许您存储，检索和删除商店中的对象。

附加信息：

* 需要Mule Enterprise许可证
* 不需要授权
*  Mule版本：3.6.0或更高版本

== 连接器配置

`<objectstore:config>`

配置对象存储全局配置设置。

[%header%autowidth.spread]
|===
| {属性{1}}说明
| name  |此配置的名称供以后参考。

类型：字符串+
默认值：无+
要求：是的
|分区 |分区的名称。如果设置了，并且在objectstore-ref属性中指定了可分区对象库，则将使用分区名称。否则，分区名称将被忽略。

这意味着：

* 如果您定义了一个objectstore-ref并且对象存储是可分区的，则连接器将使用分区名称。
* 如果您定义了一个objectstore-ref并且对象存储区不可分区，则连接器将忽略分区名称。
* 如果您未定义objectstore-ref，但提供了分区名称，则连接器会将分区名称应用于默认对象库。

类型：字符串+
默认值：无+
要求：不
|持久 |当需要的存储需要持久化或不存在时指定（如果通过ref使用objectStore-ref传递对象存储或者没有定义分区名称，则此参数没有意义）。

类型：布尔+
默认值：false +
要求：不
| objectStore  |引用一个Object Store bean。这是可选的，如果未指定，则使用默认的内存或持久存储。

类型：ObjectStore <https://docs.oracle.com/javase/8/docs/api/java/io/Serializable.html[Serializable]> +
默认值：无+
要求：不
| entryTtl  |以毫秒为单位存储值的时间。使用此参数时，maxEntries和expirationInterval属性是必需的。有效值：0表示永不过期，大于0的值以毫秒为单位过期。

类型：Integer +
默认值：无+
要求：不
| maxEntries  |指定最大条目数。使用此参数时，entryTTL和expirationInterval属性是必需的。

类型：Integer +
默认值：无+
要求：不
| expirationInterval  |以毫秒为单位指定到期检查时间间隔。使用此参数时，entryTTL和maxEntries属性是必需的。

类型：Integer +
默认值：无+
要求：不
|===

== 包含处理器

`<objectstore:contains>`

检查对象存储是否包含给定的键。

XML示例：

`<objectstore:contains key="MUL0001" config-ref="config-name"/>`

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|键 |要验证的对象的标识符。

类型：字符串+
默认值：无+
要求：是的
|===

返回：

[%header%autowidth.spread]
|===
| Java类型 |描述
|布尔
|如果对象存储包含键，则为true;否则为false。
|===

== 配置存储处理器

`<objectstore:dispose-store>`

删除给定的分区而不处理完全的对象存储。无论是否使用持久存储，在内部，此操作都会执行clear（）项目，因此用户仍应能够执行其他操作。对于持久存储，此操作仅删除文件夹的内容，但不删除文件夹本身。

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
| partitionName  |对象存储的名称。

类型：字符串+
默认值：＃[有效负载] +
要求：不
|===

== 双存储处理器

<objectstore:dual-store>

使用键存储值并存储键使用值。如果抛出异常，则回滚这两个操作。这允许一个选项指示密钥是否被覆盖。

XML示例：

`<objectstore:dual-store key="MUL0001" value-ref="#[string:Jason Goldfish]" config-ref="config-name"/>`

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|键 |要存储的对象的标识符。

类型：字符串+
默认值：无+
要求：是的
|值 |要存储的对象。如果您希望这是有效负载，请使用`value-ref="#[payload]"`。

类型：https：//docs.oracle.com/javase/8/docs/api/java/io/Serializable.html[Serializable] +
默认值：无+
要求：是的
|覆盖 |如果您要覆盖现有对象，则为True。

类型：布尔+
默认值：false +
要求：不
|===


== 删除处理器

`<objectstore:remove>`

删除相应键的对象。此操作可能会基于ignoreNotExists中传递的值以静默方式失败。

XML示例：

`<objectstore:remove key="MUL0001" config-ref="config-name"/>`

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|键 |要删除的对象的标识符。

类型：字符串+
默认值：无+
要求：是的
| ignoreNotExists  |指示操作是否忽略来自ObjectStore的NotExistsException。

类型：布尔+
默认值：false +
要求：不
|===

返回：

[%header%autowidth.spread]
|===
| Java类型 |描述
| https://docs.oracle.com/javase/8/docs/api/java/io/Serializable.html [序列化]
|之前为给定键存储的对象。如果该键不存在且ignoreNotExists为true，则该操作返回一个空对象。
|===

== 检索处理器

`<objectstore:retrieve>`

从对象库中检索一个对象，并使其在Mule消息的指定属性范围内可用。

XML示例：

`<objectstore:retrieve key="MUL0001" defaultValue-ref="#[string:MuleSoft Employee]" config-ref="config-name"/>`

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|键 |要检索的对象的标识符。

类型：字符串+
默认值：无+
要求：是的
| defaultValue  |如果键不存在，则为默认值。

类型：https：//docs.oracle.com/javase/8/docs/api/java/io/Serializable.html[Serializable] +
默认值：无+
要求：不
| targetProperty  |存储检索值的Mule Message属性。

类型：字符串+
默认值：无+
要求：不
| targetScope  | Mule消息属性范围，仅在指定targetProperty时使用。

类型：<<MulePropertyScope Enum>> +
默认值：INVOCATION +
要求：不
|===

返回：

[%header%autowidth.spread]
|===
| Java类型 |描述
| https://docs.oracle.com/javase/8/docs/api/java/io/Serializable.html [序列化]
|与给定键相关联的对象。如果找不到给定键的对象，则此方法抛出ObjectDoesNotExistException异常。
|===

== 检索所有密钥处理器

`<objectstore:retrieve-all-keys>`

返回对象存储中所有键的列表。

重要提示：并非所有商店都支持此方法。如果该方法不受支持，则抛出java.lang.UnsupportedOperationException。

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|===

返回：

[%header%autowidth.spread]
|===
| Java类型 |描述
| `List<String>`
|包含存储中所有键的java.util.List。
|===

== 检索并存储处理器

`<objectstore:retrieve-and-store>`

检索并存储在相同的操作中。

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|键 |要检索的对象的标识符。

类型：字符串+
默认值：无+
要求：是的
| defaultValue  |如果键不存在，则为默认值。

类型：https：//docs.oracle.com/javase/8/docs/api/java/io/Serializable.html[Serializable] +
默认值：无+
要求：不
| storeValue  |要存储的对象。如果您希望这是有效负载，请使用`value-ref="#[payload]"`。

类型：https：//docs.oracle.com/javase/8/docs/api/java/io/Serializable.html[Serializable] +
默认值：无+
要求：是的
| targetProperty  |存储检索值的Mule Message属性。

类型：字符串+
默认值：无+
要求：不
| targetScope  | Mule消息属性范围，仅在指定targetProperty时使用。

类型：<<MulePropertyScope Enum>> +
默认值：INVOCATION +
要求：不
|===

返回：

[%header%autowidth.spread]
|===
| Java类型 |描述
| https://docs.oracle.com/javase/8/docs/api/java/io/Serializable.html [序列化]
|与给定键相关联的对象。如果找不到给定键的对象，则此方法抛出ObjectDoesNotExistException异常。
|===

== 存储处理器

`<objectstore:store>`

将对象存储在对象存储中。这允许一个选项指示密钥是否被覆盖。

XML示例：

`<objectstore:store key="MUL0001" value-ref="#[string:Jason Goldie]" config-ref="config-name"/>`

[%header%autowidth.spread]
|===
| {属性{1}}说明
| config-ref  |指定要使用的配置。

类型：字符串+
默认值：无+
要求：是的
|键 |要存储的对象的标识符。

类型：字符串+
默认值：无+
要求：是的
|值 |要存储的对象。如果您希望这是有效负载，请使用`value-ref="#[payload]"`。

类型：https：//docs.oracle.com/javase/8/docs/api/java/io/Serializable.html[Serializable] +
默认值：无+
要求：是的
|覆盖 |如果您要覆盖现有对象，则为True。

类型：布尔+
默认值：false +
要求：不
|===

==  MulePropertyScope枚举

[source,java,linenums]
----
java.lang.Object
      java.lang.Enum<MulePropertyScope>
            org.mule.modules.objectstore.MulePropertyScope
----

所有实现的接口：

可串行化，可比<MulePropertyScope>

[source,java,linenums]
----
public enum MulePropertyScope
extends Enum<MulePropertyScope>
----
Enum for Mule Property Scope用于改善Anypoint Studio中的用户体验。

枚举常量摘要：

* 入境
*  INVOCATION
*  OUTBOUND
*  SESSION

方法摘要：

[%header%autowidth.spread]
|===
|修饰符和类型 |方法和描述
|字符串	|的toString（）
|字符串	|的值（）
|静态MulePropertyScope  | valueOf（String name）

以指定名称返回此类型的枚举常量。

|静态MulePropertyScope [] 	| values（）

按照声明的顺序返回包含此枚举类型常量的数组。
|===

从类java.lang.Enum继承的方法：clone，compareTo，equals，finalize，getDeclaringClass，hashCode，name，ordinal，valueOf

从类java.lang.Object继承的方法：getClass，notify，notifyAll，https://docs.oracle.com/javase/7/docs/api/java/lang/Object.html?is-external=true#wait（ ）[等待]，
https://docs.oracle.com/javase/7/docs/api/java/lang/Object.html?is-external=true#wait(long)[wait]
https://docs.oracle.com/javase/7/docs/api/java/lang/Object.html?is-external=true#wait(long,%20int)[wait]

枚举常量细节：

[%header%autowidth.spread]
|===
| {枚举{1}}详细
|入境 | `public static final MulePropertyScope INBOUND`
| INVOCATION  | `public static final MulePropertyScope INVOCATION`
| OUTBOUND  | `public static final MulePropertyScope OUTBOUND`
| SESSION  | `public static final MulePropertyScope SESSION`
|===

=== 值的方法详细信息

[source,java]
----
public static MulePropertyScope[] values()
----

按照声明的顺序返回包含此枚举类型常量的数组。该方法可用于迭代常量，如下所示：

[source,java,linenums]
----
for (MulePropertyScope c : MulePropertyScope.values())
    System.out.println(c);
----

返回：

包含此枚举类型的常量的数组，按照它们声明的顺序。

===  valueOf方法详细信息

[source,java]
----
public static MulePropertyScope valueOf(String name)
----

以指定名称返回此类型的枚举常量。该字符串必须完全匹配用于在此类型中声明枚举常量的标识符。不允许使用外来的空白字符。

参数：name  - 要返回的枚举常量的名称。 +
返回：具有指定名称的枚举常量。 +
抛出：+
IllegalArgumentException  - 如果此枚举类型与指定的常量没有关系。名称+
NullPointerException  - 如果参数为null。

=== 值方法详细信息

[source,java]
----
public String value()
----

===  toString方法详细信息

[source,java]
----
public String toString()
----

覆盖：

[source,java]
----
toString in class Enum<MulePropertyScope>
----


[[see-also]]
=== 另请参阅

*  link:/runtime-manager/managing-application-data-with-object-stores#semantics-and-storage-limits[语义和存储限制]
*  link:/mule-user-guide/v/3.8/mule-object-stores[骡子对象商店]
*  link:/release-notes/objectstore-connector-release-notes[发行说明]
